Release 0.015:
	* Changed hook function signatures and how enum_mobiles works
	* Full security audit for /usr/common/sys and /usr/common/obj
	* Full security audit for /usr/System
	* Added simple scripting to /usr/game
	* Added second AUTO object to /usr/game
	* Made /usr/game configure ConfigD directly
	* Made /usr/game's initd work
	* Moved most files out of /data into /usr/System, /usr/common and
	  /usr/game.
	* Added /usr/game directory
	* Moved HelpD into ~System
	* Altered how tick counts for upgraded() work
	* Changed syntax for @set_obj_parent to allow removing parent

Release 0.014:
	* Bugfix to @make_room to deal with rooms whose location is nil
	* Added floating-point support to UNQ load/save
	* More exit stuff, including load/save
	* Object weight, volume and length and their capacities load/save
	* Weight/length/volume commands for modification
	* Added weight/length/vol to @make_room/@make_detail/@make_portable
	* Added w/l/v capacities to @make_room/detail/portable
	* Changed all the can_* functions to take a user as well so we
	  can return useful reasons stuff screws up.
	* ObjectD now uses call_limited() when calling upgrade
	  functions on objects.
	* HelpD now specifically calls rlimits{...;-1} to upgrade
	* HelpD now alphabetizes the words in a help query to avoid needing
	  multiple orders
	* Objects now save in multiple files by zone
	* There's now a system for unresolved rooms - this is needed to
	  deal with zone loading and unloading properly if it's not all
	  done in one large chunk.
	* Fixed problem with upgrading -- call_limited won't directly work.

Release 0.013:
	* Added @list, an alias for @list_rooms.
	* Added @make_detail command.
	* Made details load and save properly.
	* Fixed an ObjectD bug with objects that just added an
	  "upgraded" function.
	* Made @delete work with details.
	* Cut down some now-needless stuff in the helpfiles, added
	  help for some undocumented commands.